chore: apply OpenRewrite UpgradeToJava21 recipe